...
    "好": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "OK"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "好"
...
            "state": "translated",
            "value": "译成英文"
          }
        }
      }
    },
    "详情": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Details"
...
